# visualtraversabilityplugin

./: README.md
src/grass_plugin/: CMakeLists.txt  grass_layer.xml  package.xml
src/grass_plugin/include/nav2_grass_costmap_plugin/: grass_layer.hpp
src/grass_plugin/src/: grass_layer.cpp
src/navigation_example/: package.xml  setup.cfg  setup.py
src/navigation_example/params/: nav2_params_sim.yaml
src/yolov8/: package.xml  setup.cfg  setup.py
src/yolov8/launch/: yolov8_seg_pcl_launch.py
src/yolov8/yolov8/: yolov8_segment_node.py
